# backend/api/openapi.yaml
@@ -132,6 +132,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /profile/{id}:
+    get:
+      tags:
+        - get profile
+      summary: get profile
+      parameters:
+        - name: id
+          in: path
+          description: Id of member
+          required: true
+          schema:
+            additionalProperties: false
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileWithId'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     Error:
@@ -234,6 +261,28 @@ components:
           type: string
       required:
         - token
+
+    ProfileWithId:
+      type: object
+      required:
+        - id
+        - name
+        - bio
+      properties:
+        id:
+          type: string
+          format: uuid
+          description: id of member
+        name:
+          type: string
+          description: name of member
+        bio:
+          type: string
+          description: description of goal
+      example:
+        id: "1"
+        name: "John Doe"
+        bio: "bio"
 
   securitySchemes:
     bearerAuth:
