# backend/src/app.js
@@ -7,6 +7,8 @@ const path = require('path');
 const OpenApiValidator = require('express-openapi-validator');
 const auth = require('./auth');
 const goal = require('./goal.js');
+const profile = require('./profile.js');
+const jwt = require('jsonwebtoken');
 
 const app = express();
 app.use(cors());
@@ -37,6 +39,8 @@ app.post('/v0/login', auth.login);
 app.post('/v0/goal', goal.createGoal);
 
 app.get('/v0/goal/:id', goal.viewGoal);
+
+app.get('/v0/profile/:id', profile.getUserInfo);
 
 app.get('/v0/goal', goal.getPostsByPageAndSize);
 
